--- a/style.css
+++ b/style.css
@@ -1,82 +1,79 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body{
-    font-family: sans-serif;
-    color: #fff;
-    background-image: url(bg.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100vh;
+body {
+  font-family: sans-serif;
+  color: #fff;
+  background-image: url(bg.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
 }
 
-.app{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    background: rgba(0, 0, 0, .7);
-    height: 100vh;
+.app {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.7);
+  height: 100vh;
 }
 
-
-.header{
-    padding: 60px 30px 30px 20px;
+.header {
+  padding: 60px 30px 30px 20px;
 }
 
-
-.header h1{
-    font-size: 50px;
-    color: #fbb033;
-    text-shadow: 1px 3px rgba(0, 0, 0, .9);
+.header h1 {
+  font-size: 50px;
+  color: #fbb033;
+  text-shadow: 1px 3px rgba(0, 0, 0, 0.9);
 }
 
-
-.header input{
-    width: 100%;
-    height: 40px;
-    font-size: 20px;
-    text-transform: capitalize;
-    background: transparent;
-    color: white;
-    outline: 0;
-    border-radius: 4px;
-    padding-left: 7px;
+.header input {
+  width: 100%;
+  height: 40px;
+  font-size: 20px;
+  text-transform: capitalize;
+  background: transparent;
+  color: white;
+  outline: 0;
+  border-radius: 4px;
+  padding-left: 7px;
 }
 
-.header input::placeholder{
-    color: white;
-    letter-spacing: 1px;
+.header input::placeholder {
+  color: white;
+  letter-spacing: 1px;
 }
 
-
-.city{
-    font-size: 35px;
-    font-weight: 500;
-    margin-bottom: 15px;
-    text-shadow: 1px 3px rgba(0, 0, 0, .9);
+.city {
+  font-size: 35px;
+  font-weight: 500;
+  margin-bottom: 15px;
+  text-shadow: 1px 3px rgba(0, 0, 0, 0.9);
 }
 
-.temp{
-    font-size: 80px;
-    text-shadow: 1px 3px rgba(0, 0, 0, .9);
-    margin-bottom: 15px;
-
+.temp {
+  font-size: 80px;
+  text-shadow: 1px 3px rgba(0, 0, 0, 0.9);
+  margin-bottom: 15px;
 }
 
-
-.desc{
-    font-size: 25px;
-    text-shadow: 1px 3px rgba(0, 0, 0, .9);
-    margin-bottom: 10px;
-
+.desc {
+  font-size: 25px;
+  text-shadow: 1px 3px rgba(0, 0, 0, 0.9);
+  margin-bottom: 10px;
 }
 
-.minmax{
-    font-size: 24px;
-    text-shadow: 1px 3px rgba(0, 0, 0, .9);
+.minmax {
+  font-size: 24px;
+  text-shadow: 1px 3px rgba(0, 0, 0, 0.9);
+}
+
+.weather-part img {
+  max-width: 125px;
 }
